tests/snapshots/formats__stata-dta__readstat-115.dta.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ readstat-115.dta — Stata release 115, 7 variables × 5 observations, "fillyfoal survey", 07 Oct 2026 11:00, little-endian  [0x0+0x751]
  ▾ Header  [0x0+0x6d]
      Release: 115  [0x0+0x1]
      Byte order: "LOHI (little-endian)"  [0x1+0x1]
      File type: 1  [0x2+0x1]
      Variables: 7  [0x4+0x2]
      Observations: 5  [0x6+0x4]
      Data label: "fillyfoal survey"  [0xa+0x51]
      Time stamp: "07 Oct 2026 11:00"  [0x5b+0x12]
    Variable types  [0x6d+0x7]
    Variable names  [0x74+0xe7]
    Sort order  [0x15b+0x10]
    Display formats  [0x16b+0x157]
    Value label names  [0x2c2+0xe7]
    Variable labels  [0x3a9+0x237]
    Expansion fields — 0 fields  [0x5e0+0x5]
  ▾ Variables — 7 variables
    ▾ id — long, %12.0g, "Respondent"
        Name: "id"
        Label: "Respondent"
        Type: "long"
        Display format: "%12.0g"
        Value labels: ""
        Offset in row: 0
    ▾ small — long, %12.0g, "An int8", labels small0
        Name: "small"
        Label: "An int8"
        Type: "long"
        Display format: "%12.0g"
        Value labels: "small0"
        Offset in row: 4
    ▾ mid — long, %12.0g, "An int16"
        Name: "mid"
        Label: "An int16"
        Type: "long"
        Display format: "%12.0g"
        Value labels: ""
        Offset in row: 8
    ▾ ratio — double, %10.0g, "A float"
        Name: "ratio"
        Label: "A float"
        Type: "double"
        Display format: "%10.0g"
        Value labels: ""
        Offset in row: 12
    ▾ score — double, %10.0g, "Test score"
        Name: "score"
        Label: "Test score"
        Type: "double"
        Display format: "%10.0g"
        Value labels: ""
        Offset in row: 20
    ▾ name — str22, %-9s, "Full name"
        Name: "name"
        Label: "Full name"
        Type: "str22"
        Display format: "%-9s"
        Value labels: ""
        Offset in row: 28
    ▾ born — double, %td, "Date of birth"
        Name: "born"
        Label: "Date of birth"
        Type: "double"
        Display format: "%td"
        Value labels: ""
        Offset in row: 50
  ▾ Observations — 5 rows × 58 bytes  [0x5e5+0x122]
    ▾ Observation 1 — id=1, small=1 (one), mid=300, ratio=0.5, score=12.5, name="Alice", born=1980-01-15  [0x5e5+0x3a]
        id: 1  [0x5e5+0x4]
        small: 1 — one  [0x5e9+0x4]
        mid: 300  [0x5ed+0x4]
        ratio: 0.5  [0x5f1+0x8]
        score: 12.5  [0x5f9+0x8]
        name: "Alice"  [0x601+0x16]
        born: 1980-01-15 00:00:00 UTC — 1980-01-15  [0x617+0x8]
    ▾ Observation 2 — id=2, small=-2, mid=-300, ratio=-1.25, score=99, name="Bob", born=1999-12-31  [0x61f+0x3a]
        id: 2  [0x61f+0x4]
        small: -2  [0x623+0x4]
        mid: -300  [0x627+0x4]
        ratio: -1.25  [0x62b+0x8]
        score: 99  [0x633+0x8]
        name: "Bob"  [0x63b+0x16]
        born: 1999-12-31 00:00:00 UTC — 1999-12-31  [0x651+0x8]
    ▾ Observation 3 — id=3, small=100, mid=0, ratio=., score=., name="Cedomir", born=.  [0x659+0x3a]
        id: 3  [0x659+0x4]
        small: 100  [0x65d+0x4]
        mid: 0  [0x661+0x4]
        ratio: "." — missing  [0x665+0x8]
        score: "." — missing  [0x66d+0x8]
        name: "Cedomir"  [0x675+0x16]
        born: "." — missing  [0x68b+0x8]
    ▾ Observation 4 — id=4, small=0, mid=32000, ratio=3, score=7.25, name="", born=1960-01-01  [0x693+0x3a]
        id: 4  [0x693+0x4]
        small: 0  [0x697+0x4]
        mid: 32000  [0x69b+0x4]
        ratio: 3  [0x69f+0x8]
        score: 7.25  [0x6a7+0x8]
        name: ""  [0x6af+0x16]
        born: 1960-01-01 00:00:00 UTC — 1960-01-01  [0x6c5+0x8]
    ▾ Observation 5 — id=5, small=7 (seven), mid=1, ratio=0.0010000000474974513, score=10000000000, name="Eve with a longer name", born=2024-02-29  [0x6cd+0x3a]
        id: 5  [0x6cd+0x4]
        small: 7 — seven  [0x6d1+0x4]
        mid: 1  [0x6d5+0x4]
        ratio: 0.0010000000474974513  [0x6d9+0x8]
        score: 10000000000  [0x6e1+0x8]
        name: "Eve with a longer name"  [0x6e9+0x16]
        born: 2024-02-29 00:00:00 UTC — 2024-02-29  [0x6ff+0x8]
  ▾ Value labels — 1 tables
    ▾ small0 — 1 = "one", 7 = "seven"  [0x707+0x4a]
        1: "one"
        7: "seven"
